2009-03-13  Per Bothner  <per@bothner.com>

	* Makefile.am: Some 'make clean' fixes.

2009-03-01  Per Bothner  <per@bothner.com>

	* xsltest1.xsl: New XSLT test.
	* xsltest1.expected: Expected output from xsltest1.xsl.
	* Makefile.am: Update accordingly.
	* exp-format-users.html: Update for XSLT whitespace changes.

2009-02-28  Per Bothner  <per@bothner.com>

	* RunXQTS.java (evalTest): Clear current NameLookup.
	Explicitly catch OutOfMemoryError,
	* Makefile.am (XQTS_JAVA_FLAGS): Reduce from 100MB to 90MB.

2008-08-02  Per Bothner  <per@bothner.com>

	* RunXQTS.java (<init>): Update expected failures.

2008-07-26  Per Bothner  <per@bothner.com>

	* RunXQTS.java (<init>): Remove some no-longer-expected-failues.

2008-06-16  Per Bothner  <per@bothner.com>

	* RunXQTS.java (endElement): When setting variable from <input-file>
	or <contextItem> use define rather than put to avoid problems if
	variable was previously set.

	* RunXQTS.java (<init>): Note some more expected failures.

2007-12-30  Per Bothner  <per@bothner.com>

	* RunXQTS.java (handleStartTag): Clear local document cache,
	to avoid memory leak.

	* RunXQTS.java (isSelected): Skip Constr-cont-document-3 until
	we make indexing of large sequences more reasonable.

2007-12-29  Per Bothner  <per@bothner.com>

	* RunXQTS.java (isSelected): New method.

	* RunXQTS.java (endElement): Fix handling of </module> to match
	current ModuleManager - which requires a class given a class-name.

2007-12-26  Per Bothner  <per@bothner.com>

	* TestMisc.java: Add regression trest for
	Red Hat Bugzilla #370851 "XQuery miss-search".

2007-02-23  Per Bothner  <per@bothner.com>

	* RunXQTS.java (endElement): Define instead of set input-query binding.

2007-02-18  Per Bothner  <per@bothner.com>

	* RunXQTS.java (endElement):  Ignore input-query if test not selected.

2007-01-23  Per Bothner  <per@bothner.com>

	* Makefile.am (KAWA): Use bin's kawa.sh directly.
	(various *.class): We need to set CLASSPATH explicitly now.
