@@ -1,0 +1,19 @@
+<book id="b1">
+  <part id="P1">
+    <CHAPTER>
+      <foo />  -&lt;unknown&gt;
+      <section id="s1">
+        <section id="s11" />
+      </section>
+      <section id="s2" />
+      <section id="s3">
+        <para id="p31" />
+      </section>
+    </CHAPTER>
+    <CHAPTER>
+      <foo />  -&lt;unknown&gt;
+      <section id="s4" />
+      <section id="s5" />
+    </CHAPTER>
+  </part>
+</book>
